# micro_exchange

./: .gitignore  CMakeLists.txt  justfile
bench/: bench_latency.cpp  bench_noop.cpp  bench_orderbook.cpp
src/: main.cpp
src/gateway/: buffer.hpp  framer.hpp  protocol.hpp  server.hpp  socket.hpp
src/memory/: arena.hpp
src/orderbook/: orderbook.hpp  price_level.hpp  types.hpp
test/: test_arena.cpp  test_buffer.cpp  test_framer.cpp  test_orderbook.cpp  test_price_level.cpp  test_protocol.cpp
